; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_smpc.c_SmpcCKCHG320.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_smpc.c_SmpcCKCHG320.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@CLKTYPE_26MHZ = common dso_local global i32 0, align 4
@SmpcInternalVars = common dso_local global %struct.TYPE_2__* null, align 8
@MSH2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SmpcCKCHG320() #0 {
  %1 = call i32 (...) @Vdp1Reset()
  %2 = call i32 (...) @Vdp2Reset()
  %3 = call i32 (...) @ScuReset()
  %4 = call i32 (...) @ScspReset()
  %5 = call i32 (...) @YabauseStopSlave()
  %6 = load i32, i32* @CLKTYPE_26MHZ, align 4
  %7 = call i32 @YabauseChangeTiming(i32 %6)
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SmpcInternalVars, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  %10 = load i32, i32* @MSH2, align 4
  %11 = call i32 @SH2NMI(i32 %10)
  ret void
}

declare dso_local i32 @Vdp1Reset(...) #1

declare dso_local i32 @Vdp2Reset(...) #1

declare dso_local i32 @ScuReset(...) #1

declare dso_local i32 @ScspReset(...) #1

declare dso_local i32 @YabauseStopSlave(...) #1

declare dso_local i32 @YabauseChangeTiming(i32) #1

declare dso_local i32 @SH2NMI(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
